<resources>
    <string name="app_name">Gallery</string>
    <string name="cardview">CardView</string>
    <string name="enter_image_dimensions">Enter image dimensions</string>
    <string name="height">Height</string>
    <string name="width">Width</string>
    <string name="add_image">Add Image</string>
    <string name="fetch_image">FETCH IMAGE</string>
    <string name="label">Label</string>
    <string name="add">ADD</string>
    <string name="no_items_try_adding_from_the_action_above">No items. Try adding from the action above</string>
    <string name="choose_new_palette_color">Choose new palette color</string>
    <string name="choose_new_label_title">Choose new label title</string>
    <string name="update">UPDATE</string>
    <string name="edit_colors_and_label">Edit Colors and Label</string>
    <string name="remove">Remove</string>
    <string name="share_image">Share Image</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="drag_and_drop">Drag and Drop</string>
</resources>